k8s/apps/plex/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex-deployment
  namespace: plex
spec:
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
        - name: plex-container
          image: plexinc/pms-docker:1.43.4.10903-e5521bd8c
          readinessProbe:
            httpGet:
              port: plex-port
              path: /web
          livenessProbe:
            httpGet:
              port: plex-port
              path: /web
          startupProbe:
            periodSeconds: 5
            failureThreshold: 10
            httpGet:
              port: plex-port
              path: /web
          ports:
            - name: plex-port
              containerPort: 32400
          volumeMounts:
            # qBittorrent's download folder (see torrents/). Read-only so Plex
            # can't modify or delete files the torrent client is still seeding.
            - mountPath: /data/torrents
              name: torrents-folder
              readOnly: true
            - mountPath: /config
              name: plex-config
      volumes:
        - name: torrents-folder
          hostPath:
            path: /mnt/storage/torrents
            type: Directory
        - name: plex-config
          hostPath:
            path: /home/ruchira/Data/plex
            type: Directory
