k8s/apps/plex/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-ingress
  namespace: plex
spec:
  tls:
    - secretName: plex-tls-secret
      hosts:
        - plex.home.ruchij.com
  rules:
    - host: plex.home.ruchij.com
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: plex-service
                port:
                  name: plex-port
